--- a/styles/css/vtex.product-highlights.css
+++ b/styles/css/vtex.product-highlights.css
@@ -1,5 +1,5 @@
 .productHighlightText--text-flag {
-  font-family: "Helvetica", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: black;
   background-color: white;
   text-decoration: none;
