--- a/styles/css/vtex.product-identifier.css
+++ b/styles/css/vtex.product-identifier.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .product-identifier {
-  font-family: "Helvetica", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #808080;
   font-weight: 400;
   font-size: 0.75rem;
