--- a/styles/css/vtex.product-price.css
+++ b/styles/css/vtex.product-price.css
@@ -8,7 +8,7 @@
   color: red;
   font-weight: bold;
   font-size: 14px;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   margin-left: 10px;
   margin-bottom: 4px;
 }
@@ -20,14 +20,14 @@
 }
 .installments--cuotas-producto {
   color: #00000085;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
 }
 
 .currencyContainer--cuotas-producto {
   font-size: 14px;
   color: #00000085;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
 }
 
 .sellerNameContainer--seller {
@@ -44,7 +44,7 @@
 }
 
 :global(.vtex-flex-layout-0-x-flexColChild--product-lef-col) .sellingPriceValue .currencyContainer {
-  font-family: Helvetica;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: #000;
   font-size: 27px;
