--- a/styles/css/vtex.product-specifications.css
+++ b/styles/css/vtex.product-specifications.css
@@ -1,6 +1,6 @@
 .specificationName--specification-text-specification {
   font-size: 13px;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
 }
 
 .specificationValue--specification-text-value {
