--- a/styles/css/vtex.tab-layout.css
+++ b/styles/css/vtex.tab-layout.css
@@ -14,7 +14,7 @@
   font-size: 18px;
   padding: 10px 5px;
   color: #000000d9;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   text-transform: capitalize;
 }
 
