--- a/styles/scss/vtex.product-summary.scss
+++ b/styles/scss/vtex.product-summary.scss
@@ -23,7 +23,7 @@
 }
 
 .productBrandName {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: bold;
   font-size: 15px;
   margin-left: 9px;
@@ -58,7 +58,7 @@
 }
 
 .brandName {
-  font-family: "Helvetica Light";
+  font-family: l.$font-3;
   font-weight: 400;
   font-size: 15px;
   color: #00000085;
