--- a/styles/scss/vtex.search-result.scss
+++ b/styles/scss/vtex.search-result.scss
@@ -14,7 +14,7 @@
 }
 
 .galleryTitle--layout {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 600;
   color: #808080;
   font-size: 16px;
@@ -40,7 +40,7 @@
 
 .selectedCategoryName {
   color: #00aeef;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 400;
   font-size: 12px;
 }
@@ -62,13 +62,13 @@
 }
 
 .filterTitle {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 400;
   font-size: 12px;
 }
 
 .categoryItemName {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 600;
   font-size: 14px;
 }
@@ -80,7 +80,7 @@
 
 .orderByOptionItem {
   font-size: 12px;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
 }
 
 .orderByDropdown {
@@ -94,17 +94,17 @@
 
 .filterPopupTitle {
   font-size: 12px;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
 }
 
 .filterMessage {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 700;
   font-size: 18px;
 }
 
 .totalProducts--layout {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 400;
   font-size: 12px;
   padding: 10px 5px;
@@ -130,13 +130,13 @@
 }
 
 .filterPopupTitle {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 400;
   font-size: 14px;
 }
 
 .categoryItemChildren {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-size: 12px;
   color: #00000085;
 
