--- a/styles/scss/vtex.shelf.scss
+++ b/styles/scss/vtex.shelf.scss
@@ -29,7 +29,7 @@
 }
 
 .title--shelf-destacados {
-  font-family: Helvetica;
+  font-family: l.$font-3;
   font-weight: 600;
   font-size: 30px;
   padding-top: 0;
