--- a/styles/var/_library.scss
+++ b/styles/var/_library.scss
@@ -3,7 +3,7 @@
 //fonts
 $font-1: "Poppins", sans-serif;
 $font-2: "Source Sans Pro", sans-serif;
-$font-3: "Helvetica", sans-serif;
+$font-3: 'Roboto', sans-serif;
 
 //colors
 $color-1: #1d63be;
