--- a/styles/css/vtex.breadcrumb.css
+++ b/styles/css/vtex.breadcrumb.css
@@ -1,5 +1,5 @@
 .container {
-  font-family: "Helvetica", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 0.815rem;
   font-weight: 400;
   align-items: center;
