--- a/styles/css/vtex.product-summary.css
+++ b/styles/css/vtex.product-summary.css
@@ -21,7 +21,7 @@
 }
 
 .productBrandName {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: bold;
   font-size: 15px;
   margin-left: 9px;
@@ -56,7 +56,7 @@
 }
 
 .brandName {
-  font-family: "Helvetica Light";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 15px;
   color: #00000085;
