--- a/styles/css/vtex.reviews-and-ratings.css
+++ b/styles/css/vtex.reviews-and-ratings.css
@@ -17,7 +17,7 @@
 
 .reviewsHeading {
   font-size: 18px;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   padding-bottom: 10px;
 }
 
