--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -14,7 +14,7 @@
   font-size: 12px;
   color: white;
   font-weight: 400;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
 }
 
 .paragraph--texto-submenu-imagen {
@@ -45,7 +45,7 @@
 }
 
 .paragraph--contacto-top-texto {
-  font-family: "Helvetica" !important;
+  font-family: "Roboto", sans-serif !important;
   font-weight: 700 !important;
   font-size: 13px !important;
   color: white;
@@ -73,12 +73,12 @@
 .paragraph--visualizador-top {
   font-size: 9px;
   color: white;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
 
 .paragraph {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
 }
@@ -86,7 +86,7 @@
 .link--visualizador-top {
   font-size: 9px;
   color: white;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
 
@@ -95,7 +95,7 @@
 }
 
 .paragraph--titulo-menu {
-  font-family: "Helvetica Light";
+  font-family: "Roboto", sans-serif;
   font-weight: bold;
   border-bottom: solid 2px #00aeef;
   margin: 0 0 5px;
@@ -105,7 +105,7 @@
 
 .paragraph--titulo-informativo-mobile {
   color: black;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 13px;
   letter-spacing: 1px;
@@ -127,7 +127,7 @@
 .paragraph--info-2,
 .paragraph--info-3,
 .paragraph--info-4 {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 13px;
   margin: 0;
@@ -148,7 +148,7 @@
 .paragraph--info-2-mobile,
 .paragraph--info-3-mobile,
 .paragraph--info-4-mobile {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 900;
   font-size: 11px;
   text-align: initial;
@@ -172,7 +172,7 @@
 }
 
 .paragraph--info {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
 }
@@ -259,7 +259,7 @@
 }
 
 .paragraph--titulo-sale {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
   max-width: 1280px;
@@ -270,7 +270,7 @@
 .link--sale-ver-mas {
   text-decoration: underline;
   color: black;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 17px;
 }
@@ -332,7 +332,7 @@
 
 .paragraph--footer-newsletter-text {
   margin: 0;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: #606060;
   font-size: 15px;
@@ -341,7 +341,7 @@
 .paragraph--titulo-footer {
   margin-left: 10px;
   color: white;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 13px;
   letter-spacing: 1px;
@@ -377,7 +377,7 @@
 
 .link--footer-contacto {
   color: #dad9d9;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 10px;
   margin-left: 8px;
@@ -389,7 +389,7 @@
 }
 
 .paragraph--titulo-informativo {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   color: black;
   margin-bottom: 0;
@@ -398,7 +398,7 @@
 }
 
 .paragraph--texto-informativo {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 12px;
 }
@@ -420,7 +420,7 @@
 .paragraph--titulo-footer-partner,
 .paragraph--titulo-footer-medios {
   color: white;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 13px;
   letter-spacing: 1px;
@@ -449,7 +449,7 @@
 }
 
 .paragraph--footer-newsletter-text-mobile {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 600;
   margin-bottom: 0;
 }
@@ -480,14 +480,14 @@
 
 /* MODAL */
 .strong--glosario-titulo {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
 }
 
 .paragraph--glosario-titulo {
   margin: 3px;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-size: 13px;
 }
 
@@ -729,7 +729,7 @@
 .paragraph--texto-elemento-institucional {
   margin-bottom: 0;
   font-size: 16px;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   margin-top: 0;
 }
 
@@ -953,7 +953,7 @@
 
 .headingLevel3--institucional-texto {
   text-transform: uppercase;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-size: 20px;
   color: #000;
   margin-top: 0;
