--- a/styles/css/vtex.shelf.css
+++ b/styles/css/vtex.shelf.css
@@ -27,7 +27,7 @@
 }
 
 .title--shelf-destacados {
-  font-family: Helvetica;
+  font-family: "Roboto", sans-serif;
   font-weight: 600;
   font-size: 30px;
   padding-top: 0;
