--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -75,7 +75,7 @@
 }
 
 .infoCardSubhead--info-card-showroom {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: black;
   font-size: 17px;
@@ -91,7 +91,7 @@
 }
 
 .discountInsideContainer {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   background: #00aeef;
   position: absolute;
   left: 15px;
@@ -139,7 +139,7 @@
 .container--newsletter {
   padding: 0;
   color: #fff;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
 }
 
 .inputGroup--newsletter :global(.vtex-input-prefix__group) {
@@ -329,7 +329,7 @@
 }
 
 .currencyContainer--product-price {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: black;
   font-size: 27px;
@@ -347,7 +347,7 @@
 .productBrandName--marca-product {
   color: #000;
   letter-spacing: 0.5px;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 600;
   font-size: 20px;
 }
@@ -357,7 +357,7 @@
 }
 
 .productBrand--product-name {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 30px;
@@ -377,7 +377,7 @@
 }
 
 .product-identifier--productReference {
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-size: 12px;
   color: #606060;
 }
@@ -389,7 +389,7 @@
 
 .productDescriptionText {
   color: black;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-size: 15px;
 }
 
@@ -411,7 +411,7 @@
   padding: 4px;
   font-size: 16px;
   font-weight: 600;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
 }
 
 .subscriberContainer {
@@ -437,7 +437,7 @@
 .specificationsTablePropertyHeading--specifications-product,
 .specificationsTableSpecificationHeading--specifications-product {
   color: black;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 600;
   font-size: 14px;
   border: none;
@@ -446,7 +446,7 @@
 .specificationsTableRow--specifications-product {
   border-bottom: solid 1px #a0a0a0 !important;
   display: flex;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
 }
@@ -480,7 +480,7 @@
 
 .productBrandName--marca-product-shelf {
   text-align: initial;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-size: 13px;
   font-weight: bold;
   color: #000;
@@ -605,14 +605,14 @@
 
 .price_listPrice--precio-mejor-categoria {
   color: #000;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
   font-size: 12px;
 }
 
 .currencyContainer--precio-mejor-categoria {
   font-size: 12px;
   color: #00000085;
-  font-family: "Helvetica";
+  font-family: "Roboto", sans-serif;
 }
 
 .price_sellingPrice--precio-mejor-categoria {
