--- a/styles/scss/vtex.menu.scss
+++ b/styles/scss/vtex.menu.scss
@@ -8,7 +8,7 @@
 
 .styledLinkContent--categoria-header {
   color: #ffffff;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 400;
   font-size: 15px;
   text-transform: capitalize;
@@ -19,7 +19,7 @@
 }
 
 .styledLinkContent--header-whatsapp {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   color: #fff;
 }
 
@@ -36,7 +36,7 @@
 
 .styledLinkContent--categoria-header-right {
   color: #00aeef;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: bold;
   font-size: 15px;
   text-transform: uppercase;
@@ -52,7 +52,7 @@
 
 .styledLinkContent--footer-item {
   color: #dcdcdc;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-size: 14px;
   font-weight: 400;
   margin-bottom: 10px;
@@ -93,7 +93,7 @@
 }
 
 .styledLinkContent--item-submenu-ver-todo {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-size: 13px;
   font-weight: 400;
 }
@@ -173,7 +173,7 @@
 }
 
 .styledLinkContent--item-submenu {
-  font-family: "Helvetica Light";
+  font-family: l.$font-3;
   font-weight: 400;
   color: #00000070;
   font-size: 14px;
@@ -278,7 +278,7 @@
 }
 
 .styledLinkContent--categoria-header-cian-mobile {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 400;
   align-items: center;
   color: #00aeef;
@@ -294,7 +294,7 @@
 }
 
 .styledLinkContent--categoria-header-mobile {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 400;
   align-items: center;
   color: #fff;
