--- a/styles/scss/vtex.product-specifications.scss
+++ b/styles/scss/vtex.product-specifications.scss
@@ -2,7 +2,7 @@
 
 .specificationName--specification-text-specification {
     font-size: 13px;
-    font-family: 'Helvetica';
+    font-family: l.$font-3;
 }
 
 .specificationValue--specification-text-value {
