--- a/styles/scss/vtex.reviews-and-ratings.scss
+++ b/styles/scss/vtex.reviews-and-ratings.scss
@@ -19,7 +19,7 @@
   
   .reviewsHeading {
     font-size: 18px;
-    font-family: "Helvetica";
+    font-family: l.$font-3;
     padding-bottom: 10px;
   }
   
