--- a/styles/scss/vtex.store-components.scss
+++ b/styles/scss/vtex.store-components.scss
@@ -80,7 +80,7 @@
 }
 
 .infoCardSubhead--info-card-showroom {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 400;
   color: black;
   font-size: 17px;
@@ -96,7 +96,7 @@
 }
 
 .discountInsideContainer {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   background: #00aeef;
   position: absolute;
   left: 15px;
@@ -144,7 +144,7 @@
 .container--newsletter {
   padding: 0;
   color: #fff;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
 }
 
 .inputGroup--newsletter :global(.vtex-input-prefix__group) {
@@ -338,7 +338,7 @@
 }
 
 .currencyContainer--product-price {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 400;
   color: black;
   font-size: 27px;
@@ -356,7 +356,7 @@
 .productBrandName--marca-product {
   color: #000;
   letter-spacing: 0.5px;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 600;
   font-size: 20px;
 }
@@ -366,7 +366,7 @@
 }
 
 .productBrand--product-name {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-size: 24px;
   font-weight: 400;
   line-height: 30px;
@@ -387,7 +387,7 @@
 }
 
 .product-identifier--productReference {
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-size: 12px;
   color: #606060;
 }
@@ -399,7 +399,7 @@
 
 .productDescriptionText {
   color: black;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-size: 15px;
 }
 
@@ -421,7 +421,7 @@
   padding: 4px;
   font-size: 16px;
   font-weight: 600;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
 }
 
 .subscriberContainer {
@@ -450,7 +450,7 @@
 .specificationsTablePropertyHeading--specifications-product,
 .specificationsTableSpecificationHeading--specifications-product {
   color: black;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 600;
   font-size: 14px;
   border: none;
@@ -459,7 +459,7 @@
 .specificationsTableRow--specifications-product {
   border-bottom: solid 1px #a0a0a0 !important;
   display: flex;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-weight: 400;
   font-size: 14px;
 }
@@ -493,7 +493,7 @@
 
 .productBrandName--marca-product-shelf {
   text-align: initial;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-size: 13px;
   font-weight: bold;
   color: #000;
@@ -624,14 +624,14 @@
 
 .price_listPrice--precio-mejor-categoria {
   color: #000;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
   font-size: 12px;
 }
 
 .currencyContainer--precio-mejor-categoria {
   font-size: 12px;
   color: #00000085;
-  font-family: "Helvetica";
+  font-family: l.$font-3;
 }
 
 .price_sellingPrice--precio-mejor-categoria {
