--- a/styles/scss/vtex.tab-layout.scss
+++ b/styles/scss/vtex.tab-layout.scss
@@ -16,7 +16,7 @@
       font-size: 18px;
       padding: 10px 5px;
       color: #000000d9;
-      font-family: "Helvetica";
+      font-family: l.$font-3;
       text-transform: capitalize;
     }
   }
