--- a/styles/scss/vtex.menu.scss
+++ b/styles/scss/vtex.menu.scss
@@ -47,7 +47,7 @@
 }
 
 .menuContainerNav--categorias-nav-header {
-  background: rgba(0, 0, 0, 0.85);
+  background: rgba(0, 0, 0);
 }
 
 .styledLinkContent--footer-item {
