--- a/styles/scss/vtex.sticky-layout.scss
+++ b/styles/scss/vtex.sticky-layout.scss
@@ -2,7 +2,7 @@
 
 /* MOBILE */
 .container--sticky-mobile {
-  background: rgba(0, 0, 0, 0.85);
+  background: rgba(0, 0, 0);
 }
 
 .container--sticky-header {
