--- a/styles/scss/vtex.slider-layout.scss
+++ b/styles/scss/vtex.slider-layout.scss
@@ -1,5 +1,10 @@
 @use "../var/library" as l;
 
+
+.imageElementLink--slider-home {
+  width: 100%;
+}
+
 .caretIcon--slider-home {
   color: white;
 }
@@ -98,7 +103,7 @@
   }
 }
 
-@media screen and (max-width: 1080px) and (min-width: 768px) {
+@media screen and (max-width: 1080px){
   .sliderLayoutContainer--slider-home,
   .sliderArrows--slider-home {
     margin-top: 0;
