Se disminuye intencidad de color en marcas + se eliminan arrow en formato tablet + se vuelve a dejar menu transparente

--- a/styles/scss/vtex.flex-layout.scss
+++ b/styles/scss/vtex.flex-layout.scss
@@ -111,6 +111,7 @@
 
   & :global(.vtex-rich-text-0-x-paragraph--texto-submenu-imagen){
     text-transform: capitalize;
+    color: #a4a4a4;
   }
 }
 
