se une blog al menu + se posiciona el filtro de talla y color al ultimo

--- a/styles/scss/vtex.menu.scss
+++ b/styles/scss/vtex.menu.scss
@@ -142,7 +142,7 @@
 
 .menuContainer--categorias-nav-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: unset;
   max-width: 1280px;
   margin: auto;
 }
