--- a/styles/scss/vtex.flex-layout.scss
+++ b/styles/scss/vtex.flex-layout.scss
@@ -21,7 +21,7 @@
 }
 
 .flexRow--header-main {
-  background: rgba(0, 0, 0);
+  background: rgba(0, 0, 0, .85);
   padding-top: 34px;
   z-index: 5;
 }
