--- a/styles/scss/vtex.shelf.scss
+++ b/styles/scss/vtex.shelf.scss
@@ -22,7 +22,7 @@
   margin-right: -40px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1375px){
+@media screen and (max-width: 1375px){
   .arrow {
     display: none;
   }
