--- a/styles/scss/montenbaikcl.formu.scss
+++ b/styles/scss/montenbaikcl.formu.scss
@@ -14,6 +14,7 @@
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
+    min-width: 900px;
     width: 70%;
     background: #f2f2f2;
 }
@@ -76,6 +77,7 @@
         align-items: center;
         flex-direction: column;
         width: 90%;
+        min-width: 300px;
     }
 
     .rowLeft {
