--- a/styles/scss/vtex.flex-layout.scss
+++ b/styles/scss/vtex.flex-layout.scss
@@ -932,37 +932,7 @@
   align-items: center;
 }
 
-/*Vende tu bici*/
-:global(.vtex-modal-layout-0-x-paperScrollContent) {
-  height: 70%;
-  min-width: 900px;
-
-  & :global(.vtex-modal-layout-0-x-headerContainer){
-    border:none;
-  }
-
-  & :global(.vtex-rich-text-0-x-wrapper){
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: justify;
-    padding: 0 5%;
-  }
-
-  & :global(.vtex-rich-text-0-x-paragraph){
-    color: black;
-    width: 90%;
-  }
-
-  & :global(.vtex-rich-text-0-x-strong) {
-    font-size: 2rem;
-    display: block;
-    text-align: center;
-    color: black;
-  }
-
-}
-
+//Vende tu bici
 .flexRow--row-cont-info{
   margin: 5% 0;
 
@@ -1014,13 +984,6 @@
           font-style: normal;
         }
       }
-
-      & :global(.vtex-modal-layout-0-x-triggerContainer){
-        & :global(.vtex-rich-text-0-x-paragraph){
-          margin: 0;
-        }
-      }
-
     }
 
   }
@@ -1028,7 +991,7 @@
 
 @media screen and (max-width:991px){
   .flexRow--row-cont-info{
-    margin: 5% 0;
+    display: none;
   
     & :global(.vtex-store-components-3-x-container){
       display: flex;
