--- a/styles/scss/vtex.modal-layout.scss
+++ b/styles/scss/vtex.modal-layout.scss
@@ -11,3 +11,52 @@
   width: 60%;
   border-radius: 0;
 }
+
+/*Vende tu bici*/
+.triggerContainer--disp-vende-bici{
+  & :global(.vtex-rich-text-0-x-paragraph){
+    margin: 0;
+    color:#00aeef;
+  }
+}
+
+.modal--modal-vende-bici{
+  & .paperScrollContent {
+    height: 70%;
+    min-width: 900px;
+  
+    & .headerContainer{
+      border:none;
+    }
+  
+    & :global(.vtex-rich-text-0-x-wrapper){
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: justify;
+      padding: 0 5%;
+    }
+  
+    & :global(.vtex-rich-text-0-x-paragraph){
+      color: black;
+      width: 90%;
+    }
+  
+    & :global(.vtex-rich-text-0-x-strong){
+      font-size: 2rem;
+      display: block;
+      text-align: center;
+      color: black;
+    }
+  }
+}
+
+@media screen and (max-width: 991px){
+  .modal--modal-vende-bici{
+    & .paperScrollContent {
+      width: 100%;
+      height: 90%;
+      min-width: 300px;
+    }
+  }
+}
