--- a/styles/scss/vtex.overlay-layout.scss
+++ b/styles/scss/vtex.overlay-layout.scss
@@ -1,6 +1,7 @@
 .trigger{
     border-bottom: 1px solid gray;
     width: 100%;
+    display: none;
 
     & .container--question{
         padding-left: 5%;
@@ -48,6 +49,13 @@
             }
         }
     }    
+}
+
+@media screen and (max-width:991px){
+    .trigger{
+        display: block;
+    }
+    
 }
 
 
