Se agrega landing de inscripciones para eventos y cursor pointer en landing vende tu bici en leer mas

--- a/styles/scss/vtex.rich-text.scss
+++ b/styles/scss/vtex.rich-text.scss
@@ -998,3 +998,17 @@
 .paragraph--titulo-institucional {
   font-size: 30px;
 }
+
+//landing inscribete eventos
+
+.container--eventos-text-info {
+  text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+}
+
+.wrapper--eventos-text-info {
+  width: 80%;
+}
