--- a/styles/scss/vtex.modal-layout.scss
+++ b/styles/scss/vtex.modal-layout.scss
@@ -14,6 +14,8 @@
 
 /*Vende tu bici*/
 .triggerContainer--disp-vende-bici{
+  cursor: pointer;
+  
   & :global(.vtex-rich-text-0-x-paragraph){
     margin: 0;
     color:#00aeef;
