--- a/styles/scss/montenbaikcl.formu-carreras.scss
+++ b/styles/scss/montenbaikcl.formu-carreras.scss
@@ -1,3 +1,12 @@
+.containerProds{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
+    
+}
+
 .containerForm {
     display: flex;
     align-items: center;
@@ -15,6 +24,7 @@
         border-radius: 2px;
         height: 36px;
         padding: 0 1rem;
+        background: white;
     }
 
     :global(.vtex-styleguide-9-x-dropdown){
