--- a/styles/scss/montenbaikcl.formu-carreras.scss
+++ b/styles/scss/montenbaikcl.formu-carreras.scss
@@ -2,9 +2,24 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-evenly;
-    flex-wrap: wrap;
-
+    flex-wrap: wrap; 
     
+    .prod{
+        border: 1px solid #c8c8c8;
+        max-width: 200px;
+        width: 200px;
+        height: 200px;
+        text-align: center;
+    }
+
+    .seleccionado {
+        border: 1px solid #c8c8c8;
+        max-width: 200px;
+        width: 200px;
+        height: 200px;
+        text-align: center;
+        background: #eaeaea;
+    }
 }
 
 .containerForm {
